blockml/test/errors/02_field/e298/e298.view
view: e298
table: 1
fields:
- dimension: dim1
  unnest: '...'      
  sql: 3
